add Emarketing and EPayment files

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ Business Intelligence/Project/*
 # remove  video and project files from source control
 # 99 - Semester 1/ECommerce Technologies/Class Records
 
-EMarketing & EPayment/**
+# EMarketing & EPayment/**
 ECommerce Technologies/**
 Business Intelligence/**
 
