add ECommerce Tech files

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ Business Intelligence/Project/*
 # 99 - Semester 1/ECommerce Technologies/Class Records
 
 # EMarketing & EPayment/**
-ECommerce Technologies/**
+# ECommerce Technologies/**
 Business Intelligence/**
 
 
