--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ Business Intelligence/Project/*
 
 # EMarketing & EPayment/**
 # ECommerce Technologies/**
-Business Intelligence/**
+# Business Intelligence/**
 
 
 
